--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {},
   "devDependencies": {
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   }
 }
